    doing anything that might install or remove packages in the target
    system, so that attempts to control Upstart jobs won't do anything.
  * Stop Upstart jobs when switching to runlevel 0 or 6, which I think fixes
    repeated respawns on shutdown (LP: #432140).
  * Save /var/log/installer/debug to the target system if it exists.

  [ Evan Dandrea ]
  * Port fix for return_to_partitioning from the GTK+ frontend to the
    KDE frontend (LP: #439184).
  * Explicitly depend on reiserfsprogs so that we don't have to add it
    to every live seed (LP: #431976).
  * Write /cdrom/.disk/info to /var/log/installer/media-info
    (LP: #364649).

  [ Roman Shtylman ]
  * Limit width of side breadcumbs in kde for long translation text. 
    Using elided text where needed (LP: #438918)

 -- Roman Shtylman <shtylman@gmail.com>  Mon, 05 Oct 2009 23:58:57 -0400

ubiquity (1.99.28) karmic; urgency=low

  * Automatic update of included source packages: partman-auto-loop
    0ubuntu18.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 29 Sep 2009 22:15:58 +0100

ubiquity (1.99.27) karmic; urgency=low

  * Emit starting-dm in the ubiquity and oem-config upstart jobs.
    Thanks Colin Watson!

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 29 Sep 2009 16:05:31 +0100

ubiquity (1.99.26) karmic; urgency=low

  * Disable the intro message in preparation for Ubuntu 9.10 beta.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 28 Sep 2009 22:36:21 +0100

ubiquity (1.99.25) karmic; urgency=low

  * d-i/get-sources: Clear Dir::Etc::sourceparts, so that any local
    /etc/apt/sources.list.d/ isn't used.
  * Cope with the possibility that /etc/init.d/usplash may not exist, in
    anticipation of usplash switching to Upstart jobs.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 28 Sep 2009 13:11:44 +0100

ubiquity (1.99.24) karmic; urgency=low

  * Reorganise clock handling. The system wall clock is now set as early as
    possible, and not reset after partitioning; and the timezone and